<resources>
    <string name="app_name">Proyecto_ED_Chat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_login_chat">Sign in</string>
    <string name="todo">TODO</string>
    <string name="cargando">Cargando</string>
    <string name="password">Password</string>
    <string name="ingresa_tu_apellido">Ingresa tu apellido</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="registrate">Registrate</string>
    <string name="ingresa_un_nombre_para_tu_usuario">Ingresa un nombre para tu usuario</string>
    <string name="ingresa_una_contrase_a_valida">Ingresa una contraseña valida</string>
    <string name="reigstrarme">Reigstrarme</string>
    <string name="telefono">Telefono</string>
    <string name="cumplea_os">Cumpleaños</string>
    <string name="ingresa_un_e_mail_valido">Ingresa un E-mail Valido</string>
    <string name="sign_in">Sign In</string>
    <string name="aun_no_tienes_una_cuenta_registrate">Aun no tienes una cuenta? Registrate!</string>

    <string name="title_activity_prueba">Prueba</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="contactos">Contactos</string>
    <string name="chats">Chats</string>
    <string name="titulo_frase">Titulo Frase</string>
    <string name="p">P</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_message">Write a message</string>
    <string name="actualizar">Actualizar</string>
    <string name="adjuntararchivos">AdjuntarArchivos</string>
</resources>
