<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f6"
    tools:context=".CreacionUsuario">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="269dp"
        android:background="@drawable/message_rectangle"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-146dp"
        android:background="@drawable/message_rectangle"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="419dp" />

    <EditText
        android:id="@+id/txtNombreUsuario"
        android:layout_width="338dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="174dp"
        android:background="@drawable/message_rectangle"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_marginBottom="237dp"
        android:text="@string/ingresa_un_nombre_para_tu_usuario"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="12dp"
        android:text="@string/registrate"
        android:textColor="@color/colorAccent"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_marginBottom="318dp"
        android:text="@string/ingresa_un_e_mail_valido"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/lblFecha"
        android:layout_width="165dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_marginTop="263dp"
        android:text="@string/cumplea_os"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="156dp"
        android:layout_height="33dp"
        android:layout_alignEnd="@+id/txtEmail"
        android:layout_alignTop="@+id/lblFecha"
        android:text="@string/telefono"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="202dp"
        android:background="@drawable/message_rectangle"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:background="@drawable/message_rectangle"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="132dp"
        android:layout_height="21dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_marginTop="95dp"
        android:text="@string/ingresa_tu_nombre"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="73dp" />

    <TextView
        android:id="@+id/lblApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtApellido"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_marginBottom="-202dp"
        android:text="@string/ingresa_tu_apellido"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="133dp" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_marginBottom="146dp"
        android:text="@string/ingresa_una_contrase_a_valida"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="400dp" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:background="@drawable/rectangle"
        android:text="@string/reigstrarme"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:theme="@android:style/Holo.Light.ButtonBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_below="@+id/lblFecha"
        android:background="@drawable/message_rectangle"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="222dp" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtEmail"
        android:layout_alignTop="@+id/txtFecha"
        android:background="@drawable/message_rectangle"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="222dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="73dp"
        android:layout_height="58dp"
        android:layout_alignTop="@+id/lblRegistrate"
        android:layout_toEndOf="@+id/lblRegistrate"
        app:srcCompat="@drawable/icon2" />

</RelativeLayout>